arguments - missing gap fixed, corrected wrapping

--- a/styles/scss/_arguments.scss
+++ b/styles/scss/_arguments.scss
@@ -21,10 +21,12 @@
   }
   .box--arguments{
     @media screen and (min-width: 768px)  {display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;}
+      gap:30px;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   .box--argument{
-    height:200px ;
+    min-height:300px ;
     margin: auto;
+    overflow: hidden;
     @media screen and (min-width: 768px) {
       width: 17rem;
       align-content: center;
@@ -43,3 +45,4 @@
       }
     }
   }
+}
